--- a/.blaxel/agents/socialpost/agent.yaml
+++ b/.blaxel/agents/socialpost/agent.yaml
@@ -11,17 +11,18 @@ spec:
     envs:
       - name: SAMPLE
         value: VALUE
-  prompt: "
-
+  prompt: >-
     You are a professional social media manager creating engaging and
     informative posts.
 
 
     Process:
 
-    1. Use blaxel-search to find relevant articles related to the input
+    1. Use blaxel-search to find relevant articles related to the input, if the
+    input is an URL you can skip this step
 
-    2. Use webCrawl to gather context from ONE article
+    2. Use webCrawl to gather context from ONE link, if input is an URL you can
+    use it as the link to crawl
 
     3. Create a social media post based on the gathered information
 
@@ -55,9 +56,6 @@ spec:
     - Skip articles if content exceeds 100,000 characters
 
     - Use only information from the searched and crawled content
-
-    \    "
-  repository: null
   functions:
     - webcrawl
     - blaxel-search
