--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "cdrappier",
   "license": "MIT",
   "dependencies": {
-    "@blaxel/sdk": "^0.0.68",
+    "@blaxel/sdk": "^0.0.69-alpha.100",
     "@langchain/anthropic": "^0.3.12",
     "@langchain/cohere": "^0.3.2",
     "@langchain/deepseek": "^0.0.1",
