--- a/.blaxel/agents/socialpost/Dockerfile
+++ b/.blaxel/agents/socialpost/Dockerfile
@@ -1,25 +1,23 @@
 
-FROM node:20-slim
 
-RUN apt update && apt install -y curl build-essential
+FROM node:22-slim
 
-RUN curl -fsSL https://raw.githubusercontent.com/beamlit/toolkit/main/install.sh | BINDIR=/bin sh
+# Install necessary dependencies, toolkit, then clean up
+RUN apt update && apt install -y curl     && curl -fsSL https://raw.githubusercontent.com/beamlit/toolkit/main/install.sh | BINDIR=/bin sh     && apt-get remove -y curl     && apt-get autoremove -y     && apt-get clean     && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /blaxel
 
-# Install dependencies
-COPY package.json /blaxel/package.json
-COPY package-lock.json /blaxel/package-lock.json
-RUN npm i
+# Copy dependency files first to leverage Docker cache
+COPY package.json pnpm-lock.yam[l] ./
+RUN npx pnpm install
 
-# Copy source code and utils files
-COPY README.m[d] /blaxel/README.md
-COPY LICENS[E] /blaxel/LICENSE
-COPY tsconfig.jso[n] /blaxel/tsconfig.json
-COPY src /blaxel/src
-COPY index.t[s] /blaxel/index.ts
+# Copy source files (conditional and required)
+COPY README.m[d] LICENS[E] tsconfig.jso[n] ./
+COPY src ./src
+COPY index.t[s] ./
 
-RUN npm run build
-RUN cp -r dist/* /blaxel
+# Build the application and clean up afterwards
+RUN npx pnpm run build     && cp -r dist/* /blaxel     && npx pnpm prune --prod
 
 ENV COMMAND="node index.js"
 
