--- a/package.json
+++ b/package.json
@@ -1,44 +1,30 @@
 {
-  "name": "socialpost",
+  "name": "social-post-generator",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "start": "npx tsx --tsconfig=tsconfig.json index.ts",
-    "dev": "npx tsx --tsconfig=tsconfig.json --watch index.ts",
-    "pinstall": "npx pnpm install",
-    "build": "tsc",
-    "deploy": "blaxel deploy",
-    "serve": "blaxel serve --hotreload"
-  },
+  "description": "Social post generator",
+  "main": "src/index.ts",
   "keywords": [],
-  "author": "cdrappier",
   "license": "MIT",
+  "author": "Blaxel",
+  "scripts": {
+    "start": "tsx src/index.ts",
+    "prod": "node dist/index.js",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc"
+  },
   "dependencies": {
-    "@blaxel/sdk": "^0.0.72",
-    "@langchain/anthropic": "^0.3.12",
-    "@langchain/cohere": "^0.3.2",
-    "@langchain/core": "^0.3.40",
-    "@langchain/deepseek": "^0.0.1",
-    "@langchain/langgraph": "^0.2.41",
-    "@langchain/mistralai": "^0.2.0",
-    "@langchain/openai": "^0.3.17",
-    "@langchain/xai": "^0.0.1",
-    "axios": "^1.8.1",
-    "fastify": "^5.2.1",
-    "html-to-markdown": "^1.0.0",
-    "showdown": "^2.1.0",
+    "@ai-sdk/openai": "^1.2.5",
+    "@blaxel/sdk": "0.1.1-preview.20",
+    "ai": "^4.1.61",
+    "axios": "^1.8.4",
+    "fastify": "^5.2.2",
     "turndown": "^7.2.0",
-    "uuid": "^11.1.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/jest": "^29.5.14",
-    "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.10.5",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2"
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.13.11",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
