--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.2.5",
-    "@blaxel/sdk": "0.1.15",
+    "@ai-sdk/openai": "^1.3.21",
+    "@blaxel/core": "0.2.0",
+    "@blaxel/telemetry": "0.2.0",
+    "@blaxel/vercel": "0.2.0",
     "@opentelemetry/instrumentation-fastify": "^0.45.0",
-    "ai": "^4.1.61",
-    "axios": "^1.8.4",
-    "fastify": "^5.2.2",
+    "ai": "^4.3.13",
+    "axios": "^1.9.0",
+    "fastify": "^5.3.2",
     "turndown": "^7.2.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "@types/node": "^22.13.11",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "@types/node": "^22.15.9",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
